@@ -25,11 +25,11 @@ extern "C" {
 #define __HXbitmap_quant(map, bit) \
 	((map)[bit / __HXbitmap_bpq(*(map))])
 #define HXbitmap_set(map, bit) \
-	((void)(__HXbitmap_quant(map, bit) |= (1 << (bit % __HXbitmap_bpq(*(map))))))
+	((void)(__HXbitmap_quant(map, bit) |= (1ULL << (bit % __HXbitmap_bpq(*(map))))))
 #define HXbitmap_clear(map, bit) \
-	((void)(__HXbitmap_quant(map, bit) &= ~(1 << (bit % __HXbitmap_bpq(*(map))))))
+	((void)(__HXbitmap_quant(map, bit) &= ~(1ULL << (bit % __HXbitmap_bpq(*(map))))))
 #define HXbitmap_test(map, bit) \
-	((bool)(__HXbitmap_quant(map, bit) & (1 << (bit % __HXbitmap_bpq(*(map))))))
+	((bool)(__HXbitmap_quant(map, bit) & (1ULL << (bit % __HXbitmap_bpq(*(map))))))
 
 struct stat;
 struct timespec;
