@@ -4,6 +4,7 @@ HEAD
 ====
 Fixed:
 - bitmap: set/clear/test had no effect due to wrong type selection
+- bitmap: avoid left-shift larger than type on 64-bit
 
 
 libHX 3.5 (August 01 2010)
